--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 	"homepage": "https://github.com/K1337xz/Rekrutacja-adRespect#readme",
 	"dependencies": {
 		"bootstrap": "^5.3.1",
-		"bootstrap-icons": "^1.10.5",
-		"masonry-layout": "^4.2.2"
+		"bootstrap-icons": "^1.10.5"
 	}
 }
